--- a/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
+++ b/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
@@ -49,6 +49,7 @@ xcm-executor = { workspace = true }
 
 [dev-dependencies]
 pallet-message-queue = { workspace = true }
+snowbridge-test-utils = { workspace = true }
 
 [features]
 default = ["std"]
