--- a/bridges/snowbridge/pallets/inbound-queue-v2/Cargo.toml
+++ b/bridges/snowbridge/pallets/inbound-queue-v2/Cargo.toml
@@ -50,6 +50,7 @@ frame-benchmarking = { workspace = true, default-features = true }
 hex-literal = { workspace = true, default-features = true }
 snowbridge-test-utils = { workspace = true }
 sp-keyring = { workspace = true, default-features = true }
+pallet-bridge-relayers = { workspace = true, default-features = true }
 
 [features]
 default = ["std"]
@@ -62,6 +63,7 @@ std = [
 	"frame-system/std",
 	"log/std",
 	"pallet-balances/std",
+	"pallet-bridge-relayers/std",
 	"scale-info/std",
 	"serde",
 	"snowbridge-beacon-primitives/std",
