test(asset-hub-westend-integration-tests): handle erc20 with xcm

--- a/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
@@ -11,6 +11,7 @@ publish = false
 workspace = true
 
 [dependencies]
+alloy-core = { workspace = true, features = ["sol-types"] }
 assert_matches = { workspace = true }
 codec = { workspace = true }
 
