adds missing import

--- a/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
+++ b/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
@@ -87,6 +87,7 @@ runtime-benchmarks = [
 	"frame-system/runtime-benchmarks",
 	"pallet-message-queue/runtime-benchmarks",
 	"snowbridge-core/runtime-benchmarks",
+	"snowbridge-test-utils/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"xcm-builder/runtime-benchmarks",
 	"xcm-executor/runtime-benchmarks",
