--- a/cumulus/parachains/integration-tests/emulated/chains/parachains/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/chains/parachains/assets/asset-hub-westend/Cargo.toml
@@ -30,3 +30,4 @@ xcm-builder = { workspace = true, default-features = true }
 
 # Bridges
 bp-bridge-hub-westend = { workspace = true }
+pallet-xcm-bridge = { workspace = true }
