--- a/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
@@ -40,6 +40,7 @@ cumulus-pallet-xcmp-queue = { workspace = true }
 emulated-integration-tests-common = { workspace = true }
 parachains-common = { workspace = true, default-features = true }
 westend-system-emulated-network = { workspace = true }
+rococo-system-emulated-network = { workspace = true }
 
 [dev-dependencies]
 sp-tracing = { features = ["test-utils"], workspace = true, default-features = true }
