addressing nit changes

--- a/cumulus/polkadot-omni-node/lib/Cargo.toml
+++ b/cumulus/polkadot-omni-node/lib/Cargo.toml
@@ -98,8 +98,7 @@ cumulus-client-service = { workspace = true, default-features = true }
 cumulus-primitives-aura = { workspace = true, default-features = true }
 cumulus-primitives-core = { workspace = true, default-features = true }
 cumulus-relay-chain-interface = { workspace = true, default-features = true }
-futures-timer = "3.0.3"
-predicates = "3.0.3"
+futures-timer = { workspace = true }
 
 [dev-dependencies]
 assert_cmd = { workspace = true }
