Fix issue where multiple versions are pulled from metadata

--- a/.github/workflows/checks-quick.yml
+++ b/.github/workflows/checks-quick.yml
@@ -147,12 +147,8 @@ jobs:
           fi
 
           # Extract the umbrella crate version dynamically from cargo metadata
-          # This handles both master and stable branches correctly
-          UMBRELLA_VERSION=""
-
-          # Use cargo metadata to get the version
-          UMBRELLA_VERSION=$(cargo metadata --format-version=1 | jq -r '.packages[] | select(.name == "polkadot-sdk") | .version')
-
+          UMBRELLA_VERSION=$(cargo metadata --format-version=1 | jq -r '.packages[] | select(.manifest_path | endswith("umbrella/Cargo.toml")) | .version')
+          
           if [ -z "$UMBRELLA_VERSION" ]; then
             echo "Warning: Could not determine umbrella version from cargo metadata, using fallback version 0.1.0"
             UMBRELLA_VERSION="0.1.0"
@@ -162,7 +158,7 @@ jobs:
 
           python3 scripts/generate-umbrella.py --sdk . --version "$UMBRELLA_VERSION"
 
-          cargo +nightly fmt --all
+          cargo +nightly fmt -p polkadot-sdk
 
           if [ -n "$(git status --porcelain)" ]; then
             cat <<EOF
