--- a/.github/workflows/zombienet_cumulus.yml
+++ b/.github/workflows/zombienet_cumulus.yml
@@ -35,19 +35,41 @@ jobs:
     env:
       RELAY_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/polkadot-debug:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
       COL_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/test-parachain:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+      RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
+      ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}
+      # don't retry sdk tests
+      NEXTEST_RETRIES: 0
+
     steps:
+      - name: k8s_auth
+        shell: bash
+        run: |
+          . /home/nonroot/zombie-net/scripts/ci/run-test-local-env-manager.sh
+          k8s_auth
+
       - name: Checkout
         uses: actions/checkout@v4
 
+      - uses: actions/download-artifact@v4.1.8
+        with:
+          name: prepare-cumulus-zombienet-artifacts-${{ needs.preflight.outputs.SOURCE_REF_SLUG }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          run-id: ${{ needs.preflight.outputs.BUILD_RUN_ID }}
+
+      - name: tar
+        run: tar -xvf artifacts.tar
+
       - name: script
         run: |
-          echo "RELAY_IMAGE: $RELAY_IMAGE"
-          echo "COL_IMAGE: $COL_IMAGE"
-          export DEBUG=${{ needs.preflight.outputs.DEBUG }}
-          /home/nonroot/zombie-net/scripts/ci/run-test-local-env-manager.sh \
-            --local-dir="$(pwd)/$LOCAL_DIR" \
-            --concurrency=1 \
-            --test="0001-sync_blocks_from_tip_without_connected_collator.zndsl"
+          echo "POLKADOT_IMAGE: $POLKADOT_IMAGE"
+          echo "CUMULUS_IMAGE: $CUMULUS_IMAGE"
+          ls -ltr ./artifacts
+          # use spot by default
+          export X_INFRA_INSTANCE=spot
+          # we want to use `--no-capture` in zombienet tests.
+          unset NEXTEST_FAILURE_OUTPUT
+          unset NEXTEST_SUCCESS_OUTPUT
+          cargo nextest run --archive-file ./artifacts/cumulus-zombienet-tests.tar.zst --no-capture -- sync_blocks::sync_blocks_from_tip_without_connected_collator::sync_blocks_from_tip_without_connected_collator
 
       - name: upload logs
         uses: actions/upload-artifact@v4
