--- a/.github/workflows/zombienet_parachain-template.yml
+++ b/.github/workflows/zombienet_parachain-template.yml
@@ -39,9 +39,10 @@ jobs:
     container:
       image: ${{ needs.preflight.outputs.CI_IMAGE }}
     env:
-      ZOMBIENET_INTEGRATION_TEST_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/polkadot-debug:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
-      COL_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/colander:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
-      DEBUG: ${{ needs.preflight.outputs.DEBUG }}
+      ZOMBIE_PROVIDER: "native"
+      RUST_LOG: "info,zombienet_orchestrator=debug"
+      FF_DISABLE_UMASK_FOR_DOCKER_EXECUTOR: 1
+      RUN_IN_CONTAINER: "1"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -56,8 +57,32 @@ jobs:
 
       - run: ls -R build-artifacts
 
-    #   - name: tar
-    #     shell: bash
-    #     run: |
-    #       tar -xvf artifacts.tar
-    #       rm artifacts.tar
+      - name: tar
+        shell: bash
+        run: |
+          cd build-artifacts && tar -xvf artifacts.tar
+          rm artifacts.tar
+          cd ../
+
+      - run: ls -R build-artifacts
+
+      - name: zombienet
+        id: zombienet_tests
+        shell: bash
+        run: |
+          # add `./artifacts` to the PATH
+          export PATH=$(pwd)/build-artifacts:$PATH
+          echo $PATH
+          ls -ltr $(pwd)/build-artifacts
+          cargo test -p template-zombienet-tests  --features zombienet --tests  minimal_template_block_production_test
+          cargo test -p template-zombienet-tests  --features zombienet --tests  parachain_template_block_production_test
+          cargo test -p template-zombienet-tests  --features zombienet --tests  solochain_template_block_production_test
+      #
+      #
+      - name: upload_logs
+        uses: actions/upload-artifact@v4
+        if: ${{ ! cancelled() }}
+        with:
+          name: zombienet-logs-${{ github.job }}-${{ github.sha }}
+          path: |
+            /tmp/zombie*/logs/*
