--- a/cumulus/polkadot-omni-node/Cargo.toml
+++ b/cumulus/polkadot-omni-node/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 
 [dependencies]
 color-eyre = { workspace = true }
+assert_cmd = { workspace = true }
 
 # Local
 polkadot-omni-node-lib = { workspace = true }
