--- a/.github/workflows/zombienet_parachain-template.yml
+++ b/.github/workflows/zombienet_parachain-template.yml
@@ -79,10 +79,9 @@ jobs:
         id: zombienet_tests
         shell: bash
         run: |
-          # add `./artifacts` to the PATH
-          export PATH=$(pwd)/build-artifacts-templates-node:$(pwd)/build-artifacts-linux-stable:$PATH
+          # add `artifacts` to the PATH
+          export PATH=$(pwd)/build-artifacts-templates-node/artifacts:$(pwd)/build-artifacts-linux-stable/artifacts:$PATH
           echo $PATH
-          ls -ltr $(pwd)/build-artifacts
           cargo test -p template-zombienet-tests  --features zombienet --tests  minimal_template_block_production_test
           cargo test -p template-zombienet-tests  --features zombienet --tests  parachain_template_block_production_test
           cargo test -p template-zombienet-tests  --features zombienet --tests  solochain_template_block_production_test
