--- a/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-westend/Cargo.toml
@@ -42,5 +42,8 @@ parachains-common = { workspace = true, default-features = true }
 westend-system-emulated-network = { workspace = true }
 rococo-system-emulated-network = { workspace = true }
 
+# Bridge
+pallet-xcm-bridge = { workspace = true }
+
 [dev-dependencies]
 sp-tracing = { features = ["test-utils"], workspace = true, default-features = true }
