--- a/.github/workflows/zombienet_parachain-template.yml
+++ b/.github/workflows/zombienet_parachain-template.yml
@@ -87,11 +87,11 @@ jobs:
           cargo test -p template-zombienet-tests  --features zombienet --tests  parachain_template_block_production_test
           cargo test -p template-zombienet-tests  --features zombienet --tests  solochain_template_block_production_test
       #
-      #
+      # upload 'native' logs
       - name: upload_logs
         uses: actions/upload-artifact@v4
         if: ${{ ! cancelled() }}
         with:
           name: zombienet-logs-${{ github.job }}-${{ github.sha }}
           path: |
-            /tmp/zombie*/logs/*
+            /tmp/zombie*/*/*.log
