--- a/cumulus/polkadot-omni-node/Cargo.toml
+++ b/cumulus/polkadot-omni-node/Cargo.toml
@@ -14,10 +14,12 @@ workspace = true
 
 [dependencies]
 color-eyre = { workspace = true }
-assert_cmd = { workspace = true }
 
 # Local
 polkadot-omni-node-lib = { workspace = true }
+
+[dev-dependencies]
+assert_cmd = { workspace = true }
 
 [build-dependencies]
 substrate-build-script-utils = { workspace = true, default-features = true }
