--- a/cumulus/polkadot-parachain/Cargo.toml
+++ b/cumulus/polkadot-parachain/Cargo.toml
@@ -56,6 +56,9 @@ xcm = { workspace = true, default-features = true }
 # Cumulus
 cumulus-primitives-core = { workspace = true, default-features = true }
 
+[dev-dependencies]
+assert_cmd = { workspace = true }
+
 [build-dependencies]
 substrate-build-script-utils = { workspace = true, default-features = true }
 
