--- a/polkadot/node/service/Cargo.toml
+++ b/polkadot/node/service/Cargo.toml
@@ -209,6 +209,7 @@ runtime-benchmarks = [
 	"westend-runtime?/runtime-benchmarks",
 	"xcm-runtime-apis/runtime-benchmarks",
 	"xcm/runtime-benchmarks",
+	"westend-runtime-constants?/runtime-benchmarks"
 ]
 try-runtime = [
 	"frame-system/try-runtime",
