--- a/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
+++ b/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
@@ -195,6 +195,7 @@ runtime-benchmarks = [
 	"xcm-executor/runtime-benchmarks",
 	"xcm-runtime-apis/runtime-benchmarks",
 	"xcm/runtime-benchmarks",
+	"westend-runtime-constants/runtime-benchmarks"
 ]
 try-runtime = [
 	"cumulus-pallet-aura-ext/try-runtime",
