--- a/cumulus/pallets/rc-migrator/Cargo.toml
+++ b/cumulus/pallets/rc-migrator/Cargo.toml
@@ -22,6 +22,7 @@ sp-std = { workspace = true }
 sp-io = { workspace = true }
 pallet-asset-rate = { workspace = true }
 pallet-balances = { workspace = true }
+pallet-staking-async = { workspace = true }
 pallet-bags-list = { workspace = true }
 pallet-bounties = { workspace = true }
 pallet-conviction-voting = { workspace = true }
