--- a/bridges/snowbridge/primitives/core/Cargo.toml
+++ b/bridges/snowbridge/primitives/core/Cargo.toml
@@ -18,6 +18,7 @@ exclude-from-umbrella = true
 codec = { workspace = true }
 hex-literal = { workspace = true, default-features = true }
 log = { workspace = true }
+tracing = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { optional = true, features = ["alloc", "derive"], workspace = true }
 
