--- a/bridges/snowbridge/primitives/core/Cargo.toml
+++ b/bridges/snowbridge/primitives/core/Cargo.toml
@@ -18,9 +18,9 @@ exclude-from-umbrella = true
 codec = { workspace = true }
 hex-literal = { workspace = true, default-features = true }
 log = { workspace = true }
-tracing = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { optional = true, features = ["alloc", "derive"], workspace = true }
+tracing = { workspace = true }
 
 polkadot-parachain-primitives = { workspace = true }
 xcm = { workspace = true }
@@ -53,6 +53,7 @@ std = [
 	"sp-io/std",
 	"sp-runtime/std",
 	"sp-std/std",
+	"tracing/std",
 	"xcm-builder/std",
 	"xcm-executor/std",
 	"xcm/std",
