--- a/polkadot/node/network/collator-protocol/Cargo.toml
+++ b/polkadot/node/network/collator-protocol/Cargo.toml
@@ -51,5 +51,5 @@ polkadot-node-subsystem-test-helpers = { workspace = true }
 polkadot-primitives-test-helpers = { workspace = true }
 
 [features]
-default = []
+default = ["experimental-collator-protocol"]
 experimental-collator-protocol = ["async-trait", "tokio"]
