--- a/Cargo.toml
+++ b/Cargo.toml
@@ -835,6 +835,7 @@ honggfuzz = { version = "0.5.55" }
 http = { version = "1.1" }
 http-body = { version = "1", default-features = false }
 http-body-util = { version = "0.1.2", default-features = false }
+humantime-serde = { version = "1.1" }
 hyper = { version = "1.3.1", default-features = false }
 hyper-rustls = { version = "0.27.3", default-features = false, features = [
 	"http1",
