--- a/cumulus/zombienet/examples/small_network.toml
+++ b/cumulus/zombienet/examples/small_network.toml
@@ -14,12 +14,12 @@ validator = true
 [[parachains]]
 id = 2000
 cumulus_based = true
-#chain = "asset-hub-rococo-local"
+chain = "asset-hub-rococo-local"
 
 # run charlie as parachain collator
 [[parachains.collators]]
 name = "charlie"
 validator = true
 image = "parity/polkadot-parachain:latest"
-command = "test-parachain"
-args = ["--force-authoring", "--authoring slot-based"]
+command = "polkadot-parachain"
+args = ["--force-authoring"]
