--- a/.github/actions/build-push-image/action.yml
+++ b/.github/actions/build-push-image/action.yml
@@ -4,8 +4,11 @@ inputs:
     description: "dockerfile to build"
     required: true
   image-name:
-    description: ""
+    description: "image name (without registry)"
     required: true
+  pushToDockerhub:
+    description: ""
+    default: true
 outputs:
   branch:
     description: "Branch name for the PR"
@@ -29,6 +32,7 @@ runs:
       shell: bash
       env:
         ZOMBIENET_IMAGE: "docker.io/paritytech/zombienet:v1.3.105"
+        IMAGE_TAG: europe-docker.pkg.dev/parity-ci-2024/temp-images/${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION
       run: |
         export DOCKER_IMAGES_VERSION=${{ github.event.pull_request.head.sha }}
         if [[ ${{ github.event_name }} == "merge_group" ]]; then export DOCKER_IMAGES_VERSION="${GITHUB_SHA::8}"; fi
@@ -37,7 +41,21 @@ runs:
           --build-arg BUILD_DATE="$(date -u '+%Y-%m-%dT%H:%M:%SZ')" \
           --build-arg IMAGE_NAME="${{ inputs.image-name }}" \
           --build-arg ZOMBIENET_IMAGE="${ZOMBIENET_IMAGE}" \
-          -t "${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION" \
+          -t "${{ env.IMAGE_TAG }}" \
           -f ${{ inputs.dockerfile }} \
           .
         docker push "${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION"
+
+    - name: login to dockerhub
+      if: ${{ inputs.pushToDockerhub }}
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+        password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
+
+    - name: push to dockerhub
+      if: ${{ inputs.pushToDockerhub }}
+      run: |
+        docker tag ${{ env.IMAGE_TAG }} docker.io/paritypr/${{ inputs.image-name }}:$DOCKER_IMAGES_VERSION
+
+
