--- a/.github/workflows/build-publish-images.yml
+++ b/.github/workflows/build-publish-images.yml
@@ -417,7 +417,7 @@ jobs:
       - name: build and push image
         uses: ./.github/actions/build-push-image
         with:
-          image-name: "europe-docker.pkg.dev/parity-ci-2024/temp-images/test-parachain"
+          image-name: "test-parachain"
           dockerfile: "docker/dockerfiles/test-parachain_injected.Dockerfile"
 
   #
@@ -441,7 +441,7 @@ jobs:
       - name: build and push image
         uses: ./.github/actions/build-push-image
         with:
-          image-name: "europe-docker.pkg.dev/parity-ci-2024/temp-images/polkadot-debug"
+          image-name: "polkadot-debug"
           dockerfile: "docker/dockerfiles/polkadot/polkadot_injected_debug.Dockerfile"
 
   #
@@ -465,7 +465,7 @@ jobs:
       - name: build and push image
         uses: ./.github/actions/build-push-image
         with:
-          image-name: "europe-docker.pkg.dev/parity-ci-2024/temp-images/colander"
+          image-name: "colander"
           dockerfile: "docker/dockerfiles/collator_injected.Dockerfile"
 
   #
@@ -489,7 +489,7 @@ jobs:
       - name: build and push image
         uses: ./.github/actions/build-push-image
         with:
-          image-name: "europe-docker.pkg.dev/parity-ci-2024/temp-images/malus"
+          image-name: "malus"
           dockerfile: "docker/dockerfiles/malus_injected.Dockerfile"
 
   #
@@ -513,7 +513,7 @@ jobs:
       - name: build and push image
         uses: ./.github/actions/build-push-image
         with:
-          image-name: "europe-docker.pkg.dev/parity-ci-2024/temp-images/substrate"
+          image-name: "substrate"
           dockerfile: "docker/dockerfiles/substrate_injected.Dockerfile"
 
   #
@@ -562,7 +562,7 @@ jobs:
       - name: build and push image
         uses: ./.github/actions/build-push-image
         with:
-          image-name: "europe-docker.pkg.dev/parity-ci-2024/temp-images/bridges-zombienet-tests"
+          image-name: "bridges-zombienet-tests"
           dockerfile: "docker/dockerfiles/bridges_zombienet_tests_injected.Dockerfile"
 
   #
@@ -586,7 +586,7 @@ jobs:
       - name: build and push image
         uses: ./.github/actions/build-push-image
         with:
-          image-name: "europe-docker.pkg.dev/parity-ci-2024/temp-images/polkadot-parachain-debug"
+          image-name: "polkadot-parachain-debug"
           dockerfile: "docker/dockerfiles/polkadot-parachain/polkadot-parachain-debug_unsigned_injected.Dockerfile"
 
   confirm-required-build-jobs-passed:
