--- a/.github/workflows/build-publish-images.yml
+++ b/.github/workflows/build-publish-images.yml
@@ -419,6 +419,8 @@ jobs:
         with:
           image-name: "test-parachain"
           dockerfile: "docker/dockerfiles/test-parachain_injected.Dockerfile"
+          username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
 
   #
   #
@@ -443,6 +445,8 @@ jobs:
         with:
           image-name: "polkadot-debug"
           dockerfile: "docker/dockerfiles/polkadot/polkadot_injected_debug.Dockerfile"
+          username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
 
   #
   #
@@ -467,6 +471,8 @@ jobs:
         with:
           image-name: "colander"
           dockerfile: "docker/dockerfiles/collator_injected.Dockerfile"
+          username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
 
   #
   #
@@ -491,6 +497,8 @@ jobs:
         with:
           image-name: "malus"
           dockerfile: "docker/dockerfiles/malus_injected.Dockerfile"
+          username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
 
   #
   #
@@ -515,6 +523,8 @@ jobs:
         with:
           image-name: "substrate"
           dockerfile: "docker/dockerfiles/substrate_injected.Dockerfile"
+          username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
 
   #
   #
@@ -564,6 +574,8 @@ jobs:
         with:
           image-name: "bridges-zombienet-tests"
           dockerfile: "docker/dockerfiles/bridges_zombienet_tests_injected.Dockerfile"
+          username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
 
   #
   #
@@ -588,6 +600,8 @@ jobs:
         with:
           image-name: "polkadot-parachain-debug"
           dockerfile: "docker/dockerfiles/polkadot-parachain/polkadot-parachain-debug_unsigned_injected.Dockerfile"
+          username: ${{ secrets.PARITYPR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PARITYPR_DOCKERHUB_PASSWORD }}
 
   confirm-required-build-jobs-passed:
     runs-on: ubuntu-latest
